[package]
name = "alice-cloud-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "Cloud gateway for ALICE edge-to-cloud SDF streaming pipeline"
license = "AGPL-3.0"
keywords = ["gateway", "sdf", "streaming", "edge-computing"]

[dependencies]
# ALICE Ecosystem
alice-db = { path = "../ALICE-DB", features = ["sdf"] }
alice-cache = { path = "../ALICE-Cache" }
alice-sync = { path = "../ALICE-Sync", features = ["cloud"] }
alice-cdn = { path = "../ALICE-CDN", features = ["sdf"] }
alice-crypto = { path = "../ALICE-Crypto", default-features = false, features = ["std"] }
alice-analytics = { path = "../ALICE-Analytics", default-features = false, features = ["std"] }
libasp = { path = "../ALICE-Streaming-Protocol", default-features = false }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
